地图更新&导航文字颜色

--- a/gdut_hospital/html/assistant.html
+++ b/gdut_hospital/html/assistant.html
@@ -54,7 +54,7 @@
 								<li><a href="">普通门诊</a></li><span>|</span>
 								<li><a href="">专家门诊</a></li><span>|</span>
 								<li><a href="">化验检查</a></li><span>|</span>
-								<li><a href="">辅助检查</a></li><span>|</span>
+								<li><a class="nav_menu_cur" href="">辅助检查</a></li><span>|</span>
 								<li><a href="">交通指南</a></li>
 							</ul>
 						</li>
