--- a/gdut_hospital/html/expert_intro.html
+++ b/gdut_hospital/html/expert_intro.html
@@ -35,7 +35,7 @@
 						<li><a class="current" href="">&gt医院概况</a>
 							<ul>
 								<li><a href="">医院简介</a></li><span>|</span>
-								<li><a href="">专家介绍</a></li><span>|</span>
+								<li><a class="nav_menu_cur" href="">专家介绍</a></li><span>|</span>
 								<li><a href="">医护人员</a></li><span>|</span>
 								<li><a href="">规章制度</a></li>
 							</ul>
