--- a/gdut_hospital/html/feedback_details.html
+++ b/gdut_hospital/html/feedback_details.html
@@ -82,7 +82,7 @@
 						<li>
 							<a class="current" href="#">&gt交流平台</a>
 							<ul>
-								<li><a href="">意见反馈</a></li><span>|</span>
+								<li><a class="nav_menu_cur" href="">意见反馈</a></li><span>|</span>
 								<li><a href="">下载专区</a></li>
 							</ul>
 						</li>
