--- a/gdut_hospital/html/prevent.html
+++ b/gdut_hospital/html/prevent.html
@@ -68,7 +68,7 @@
 						<li>
 							<a class="current" href="#">&gt健康保健</a>
 							<ul>
-								<li><a href="">预防保健</a></li><span>|</span>
+								<li><a class="nav_menu_cur" href="">预防保健</a></li><span>|</span>
 								<li><a href="">健康教育</a></li>
 							</ul>
 						</li>
