--- a/gdut_hospital/html/traffic_guide_map.html
+++ b/gdut_hospital/html/traffic_guide_map.html
@@ -55,7 +55,7 @@
 								<li><a href="">专家门诊</a></li><span>|</span>
 								<li><a href="">化验检查</a></li><span>|</span>
 								<li><a href="">辅助检查</a></li><span>|</span>
-								<li><a href="">交通指南</a></li>
+								<li><a class="nav_menu_cur" href="">交通指南</a></li>
 							</ul>
 						</li>
 						<span class="bar"></span>
@@ -112,13 +112,13 @@
 					<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">就医指南</a> > <a href="#">交通指南</a></div>
 					<h2>交通指南</h2>
 					<div class="guide">
-						<ul>
+						<!-- <ul>
 							<li class="first"></li>
 							<li class="map_guide"><a href="#">地图导航</a></li>
 							<li class="shop"><a href="#">周边商户</a></li>
 							<li class="bus"><a href="#">公交路线</a></li>
 							<li class="last"></li>
-						</ul>
+						</ul> -->
 						<!-- <div class="query">
 							<form>
 								<input class="from">
@@ -129,7 +129,7 @@
 							</form>
 						</div>	 -->
 						<div class="map">
-							<iframe src="../js/testMap.html" width="697" height="340"></iframe>
+							<iframe src="../js/testMap.html" width="700" height="390"></iframe>
 						</div>
 					</div>
 				</div>	
