--- a/gdut_hospital/html/department.html
+++ b/gdut_hospital/html/department.html
@@ -68,9 +68,8 @@
 						<li>
 							<a href="#">&gt健康保健</a>
 							<ul>
-								<li><a href="">医院院院简介</a></li><span>|</span>
-								<li><a href="">专家介绍</a></li><span>|</span>
-								<li><a href="">医护人员员员</a></li>
+								<li><a href="">预防保健</a></li><span>|</span>
+								<li><a href="">健康教育</a></li>
 							</ul>
 						</li>
 						<span class="bar"></span>
