--- a/gdut_hospital/html/doctor_intro.html
+++ b/gdut_hospital/html/doctor_intro.html
@@ -36,7 +36,7 @@
 							<ul>
 								<li><a href="">医院简介</a></li><span>|</span>
 								<li><a href="">专家介绍</a></li><span>|</span>
-								<li><a href="">医护人员</a></li><span>|</span>
+								<li><a class="nav_menu_cur" href="">医护人员</a></li><span>|</span>
 								<li><a href="">规章制度</a></li>
 							</ul>
 						</li>
