--- a/gdut_hospital/html/expert.html
+++ b/gdut_hospital/html/expert.html
@@ -51,7 +51,7 @@
 							<ul>
 								<li><a href="">急诊指南</a></li><span>|</span>
 								<li><a href="">普通门诊</a></li><span>|</span>
-								<li><a href="">专家门诊</a></li><span>|</span>
+								<li><a class="nav_menu_cur" href="">专家门诊</a></li><span>|</span>
 								<li><a href="">化验检查</a></li><span>|</span>
 								<li><a href="">辅助检查</a></li><span>|</span>
 								<li><a href="">交通指南</a></li>
