--- a/gdut_hospital/html/first_aid_guide.html
+++ b/gdut_hospital/html/first_aid_guide.html
@@ -50,7 +50,7 @@
 						<li>
 							<a class="current" href="#">&gt就医指南</a>
 							<ul>
-								<li><a href="">急诊指南</a></li><span>|</span>
+								<li><a class="nav_menu_cur" href="">急诊指南</a></li><span>|</span>
 								<li><a href="">普通门诊</a></li><span>|</span>
 								<li><a href="">专家门诊</a></li><span>|</span>
 								<li><a href="">化验检查</a></li><span>|</span>
