--- a/gdut_hospital/html/health_edu.html
+++ b/gdut_hospital/html/health_edu.html
@@ -69,7 +69,7 @@
 							<a class="current" href="#">&gt健康保健</a>
 							<ul>
 								<li><a href="">预防保健</a></li><span>|</span>
-								<li><a href="">健康教育</a></li>
+								<li><a class="nav_menu_cur" href="">健康教育</a></li>
 							</ul>
 						</li>
 						<span class="bar"></span>
