--- a/gdut_hospital/html/rule_details.html
+++ b/gdut_hospital/html/rule_details.html
@@ -37,7 +37,7 @@
 								<li><a href="">医院简介</a></li><span>|</span>
 								<li><a href="">专家介绍</a></li><span>|</span>
 								<li><a href="">医护人员</a></li><span>|</span>
-								<li><a href="">规章制度</a></li>
+								<li><a class="nav_menu_cur" href="">规章制度</a></li>
 							</ul>
 						</li>
 						<span class="bar"></span>
