--- a/gdut_hospital/js/testMap.html
+++ b/gdut_hospital/js/testMap.html
@@ -97,6 +97,7 @@
         color: #000000;
         letter-spacing: 2px;
         padding-bottom: 5px;
+        margin: 0;
     }
 
     #route_page .query p {
