左列表hover状态

--- a/gdut_hospital/html/assistant.html
+++ b/gdut_hospital/html/assistant.html
@@ -101,12 +101,12 @@
 			<div class="wrap">
 				<div class="part">
 					<ul>
-						<a class="first_aid" href="#"><li>急诊指南</li></a>
-						<a class="ordinary" href="#"><li>普通门诊</li></a>
-						<a class="expert" href="#"><li>专家门诊</li></a>
-						<a class="test" href="#"><li>化验检查</li></a>
+						<a class="first_aid part_other" href="#"><li>急诊指南</li></a>
+						<a class="ordinary part_other" href="#"><li>普通门诊</li></a>
+						<a class="expert part_other" href="#"><li>专家门诊</li></a>
+						<a class="test part_other" href="#"><li>化验检查</li></a>
 						<a class="assistant part_cur" href="#"><li>辅助检查</li></a>
-						<a class="traffic" href="#"><li>交通指南</li></a>
+						<a class="traffic part_other" href="#"><li>交通指南</li></a>
 					</ul>
 				</div>
 				<div class="medical_guide">
