--- a/gdut_hospital/html/doctor_intro.html
+++ b/gdut_hospital/html/doctor_intro.html
@@ -100,10 +100,10 @@
 			<div class="wrap">
 				<div class="part">
 					<ul>
-						<a class="hospital" href="#"><li>医院介绍</li></a>
-						<a class="expert" href="#"><li>专家介绍</li></a>
+						<a class="hospital part_other" href="#"><li>医院介绍</li></a>
+						<a class="expert part_other" href="#"><li>专家介绍</li></a>
 						<a class="doctor part_cur" href="#"><li>医护人员</li></a>
-						<a class="rules" href="#"><li>规章制度</li></a>
+						<a class="rules part_other" href="#"><li>规章制度</li></a>
 					</ul>
 				</div>
 				<div class="introduction">
