--- a/gdut_hospital/html/download.html
+++ b/gdut_hospital/html/download.html
@@ -100,7 +100,7 @@
 			<div class="wrap">
 				<div class="part">
 					<ul>
-						<a class="feedback" href="#"><li>意见反馈</li></a>
+						<a class="feedback part_other" href="#"><li>意见反馈</li></a>
 						<a class="download part_cur" href="#"><li>下载专区</li></a>
 					</ul>
 				</div>
