--- a/gdut_hospital/html/feedback.html
+++ b/gdut_hospital/html/feedback.html
@@ -103,7 +103,7 @@
 					<div class="part">
 						<ul>
 							<a class="feedback part_cur" href="#"><li>意见反馈</li></a>
-							<a class="download" href="#"><li>下载专区</li></a>
+							<a class="download part_other" href="#"><li>下载专区</li></a>
 						</ul>
 					</div>
 					<div class="communication">
