--- a/gdut_hospital/html/health_edu.html
+++ b/gdut_hospital/html/health_edu.html
@@ -100,7 +100,7 @@
 			<div class="wrap">
 				<div class="part">
 					<ul>
-						<a class="prevent" href="#"><li>预防保健</li></a>
+						<a class="prevent part_other" href="#"><li>预防保健</li></a>
 						<a class="health_edu part_cur" href="#"><li>健康教育</li></a>
 					</ul>
 				</div>
