--- a/gdut_hospital/html/prevent.html
+++ b/gdut_hospital/html/prevent.html
@@ -101,7 +101,7 @@
 				<div class="part">
 					<ul>
 						<a class="prevent part_cur" href="#"><li>预防保健</li></a>
-						<a class="health_edu" href="#"><li>健康教育</li></a>
+						<a class="health_edu part_other" href="#"><li>健康教育</li></a>
 					</ul>
 				</div>
 				<div class="health_care">
