--- a/gdut_hospital/html/rules.html
+++ b/gdut_hospital/html/rules.html
@@ -101,9 +101,9 @@
 			<div class="wrap">
 				<div class="part">
 					<ul>
-						<a class="hospital" href="#"><li>医院介绍</li></a>
-						<a class="expert" href="#"><li>专家介绍</li></a>
-						<a class="doctor" href="#"><li>医护人员</li></a>
+						<a class="hospital part_other" href="#"><li>医院介绍</li></a>
+						<a class="expert part_other" href="#"><li>专家介绍</li></a>
+						<a class="doctor part_other" href="#"><li>医护人员</li></a>
 						<a class="rules part_cur" href="#"><li>规章制度</li></a>
 					</ul>
 				</div>
