--- a/gdut_hospital/html/download_details.html
+++ b/gdut_hospital/html/download_details.html
@@ -101,7 +101,7 @@
 				<div>
 					<div class="part">
 						<ul>
-							<a class="feedback" href="#"><li>意见反馈</li></a>
+							<a class="feedback part_other" href="#"><li>意见反馈</li></a>
 							<a class="download part_cur" href="#"><li>下载专区</li></a>
 						</ul>
 					</div>
